--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.6",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
