--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,3 +1,6 @@
+# .env file
+.env
+
 # node modules
 node_modules
 
@@ -6,6 +9,3 @@ package-lock.json
 
 # editor directories and files
 .vscode
-
-# firebase config file
-firebase.js
